Fix issue: timeline overflows with small screen height

--- a/new/src/sections/timeline/timelineLeftSection.scss
+++ b/new/src/sections/timeline/timelineLeftSection.scss
@@ -1,7 +1,7 @@
 .timeline-left-section {
   &-content {
     position: relative;
-    min-height: 50vh;
+    min-height: 425px;
   }
 
   &-background-line {
